Fix chatbot overlapping issue by reducing navbar z-index

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -378,8 +378,8 @@ header {
 }
 
 
-iframe[src*="botpress"] {
-    z-index: 999999 !important;
+header{
+    z-index: 1000;
 }
 
 
